v2.0.x-SNAPSHOT/connectors/database/timescale.mdx
---
title: TimescaleDB Connector | OpenMetadata Database Integration
description: Connect TimescaleDB to OpenMetadata with our comprehensive database connector guide. Step-by-step setup, configuration examples, and metadata extraction tips.
sidebarTitle: Overview
collate: true
---
import { ConnectorDetailsHeader } from '/snippets/components/ConnectorDetailsHeader/ConnectorDetailsHeader.jsx'
import MetadataAgentDatabase from '/snippets/connectors/metadata-agent/database.mdx'
import Related from '/snippets/v2.0.x-SNAPSHOT/connectors/database/related.mdx'

<ConnectorDetailsHeader
icon='/public/images/connectors/timescale.webp'
name="TimescaleDB"
stage="BETA"
availableFeatures={["Metadata", "Query Usage", "Data Profiler", "Data Quality", "dbt", "Lineage", "Column-level Lineage", "Owners", "Tags", "Stored Procedures", "Sample Data", "Auto-Classification"]}
unavailableFeatures={["Stored Procedures Lineage"]}
/>

In this section, we provide guides and references to use the TimescaleDB connector.
Configure and schedule TimescaleDB metadata and profiler workflows from the OpenMetadata UI:
- [Hypertable-Aware Profiling](#hypertable-aware-profiling)
- [Requirements](#requirements)
- [Metadata Ingestion](#metadata-ingestion)
- [Securing TimescaleDB Connection with SSL in OpenMetadata](#securing-timescaledb-connection-with-ssl-in-openmetadata)
- [Lineage](/v2.0.x-SNAPSHOT/how-to-guides/data-lineage/workflow)
- [Data Profiler](/v2.0.x-SNAPSHOT/how-to-guides/data-quality-observability/profiler/profiler-workflow)
- [Data Quality](/v2.0.x-SNAPSHOT/how-to-guides/data-quality-observability/quality)
- [dbt Integration](/v2.0.x-SNAPSHOT/connectors/database/dbt)
- [Troubleshooting](/v2.0.x-SNAPSHOT/connectors/database/timescale/troubleshooting)

## Hypertable-Aware Profiling

Starting from OpenMetadata **version 1.12**, the **Data Profiler**, **Data Quality**, and **Auto-Classification** workflows are optimized for TimescaleDB hypertables with compression enabled.

### How it works

When a hypertable has both compressed and uncompressed chunks, OpenMetadata automatically restricts all profiling queries to **uncompressed data only**. This avoids the expensive decompression operations that would otherwise be required to scan compressed chunks, significantly reducing CPU usage and memory pressure on the database.

For **table-level metrics**, the profiler uses TimescaleDB-specific functions:
- `approximate_row_count()` instead of scanning `pg_catalog` for row counts
- `hypertable_size()` instead of `pg_total_relation_size()` for size metrics

For hypertables without compression or regular PostgreSQL tables, the profiler falls back to standard PostgreSQL behavior.

<Warning>
**Thread count considerations:** Each profiler thread opens a separate database connection. When querying hypertables, each connection acquires locks on the chunks it accesses. Running multiple threads against a hypertable with many chunks can exhaust PostgreSQL's `max_locks_per_transaction` shared memory, resulting in `out of shared memory` errors. If you encounter this error, reduce the `threadCount` in your profiler configuration or increase `max_locks_per_transaction` on the database side.
</Warning>

## Requirements

Before configuring the TimescaleDB connector, make sure the following requirements are in place.

<Tip>
Starting from OpenMetadata **version 1.6.5**, support for **Stored Procedures Lineage** has been introduced. This feature enables tracking the relationships and dependencies between stored procedures and other database objects, enhancing lineage visibility and data traceability.
</Tip>

<Tip>
TimescaleDB is built on PostgreSQL. Note that we only support officially supported PostgreSQL versions. You can check the version list [here](https://www.postgresql.org/support/versioning/).
</Tip>

### Usage and Lineage considerations

When extracting lineage and usage information from TimescaleDB, OpenMetadata bases its findings on the `pg_stat_statements` table. You can find more information about it in the official [documentation](https://www.postgresql.org/docs/current/pgstatstatements.html#id-1.11.7.39.6).

Another interesting consideration is explained in the following Stack Overflow [question](https://stackoverflow.com/questions/50803147/what-is-the-timeframe-for-pg-stat-statements). As a summary:
- The `pg_stat_statements` table has no time data embedded in it.
- It shows all queries since the last reset (one can call `pg_stat_statements_reset()`).

When extracting usage and lineage data, the query log duration has no impact, only the query limit.

**Note:** For usage and lineage, grant your user the `pg_read_all_stats` permission.

```sql
GRANT pg_read_all_stats TO your_user;
```

### IAM Authentication

In order to connect via IAM, you need the following:

1. **Database is configured to use IAM authentication.** Ensure that the RDS instance has IAM DB authentication enabled. Otherwise, click **Modify** to enable it.

2. **The user has the necessary IAM permissions.** Even if you use IAM to connect to TimescaleDB, you need to specify a user to prepare the connection. Create a user as follows:

```sql
CREATE USER iam_user WITH LOGIN;
GRANT rds_iam TO iam_user;
```

3. **The AWS Role has the necessary permissions.** The role used to perform the ingestion needs the following permissions:

```json
{
    "Version": "2012-10-17",
    "Statement": [
        {
            "Effect": "Allow",
            "Action": [
                "rds-db:connect"
            ],
            "Resource": [
                "arn:aws:rds-db:eu-west-1:<aws_account_number>:dbuser:<rds_db_resource_id>/<timescale_user>"
            ]
        }
    ]
}
```

Otherwise, you might encounter an error such as:

```
PAM authentication failed for user "user"
```

## Metadata Ingestion

To ingest metadata from TimescaleDB, you need to create a service connection. The service connects TimescaleDB with OpenMetadata. Once you create a service, OpenMetadata automatically starts ingesting metadata.

### Step 1: Add New Service

1. Navigate to **Settings** > **Services**.

   <img src="/public/images/connector2.0/metadata-ingestion/access-services.png" alt="Navigate to Settings and Services" />

2. Click **Add New Service**.

   <img src="/public/images/connector2.0/metadata-ingestion/add-new-service.png" alt="Add New Service" />

### Step 2: Select a Service and Connector

From the service type dropdown, select **Database Services**, then click the **TimescaleDB** connector tile.

![Select Service](/public/images/connector2.0/metadata-ingestion/Database/select-service/timescale.png)

### Step 3: Add Service Name and Description

- Enter a unique, descriptive **Service Name**. OpenMetadata identifies services by their service name. Enter a name that distinguishes this deployment from other TimescaleDB services you are ingesting metadata from.
- Optional: Enter a **Description** for the service.

![Configure Service](/public/images/connector2.0/metadata-ingestion/Database/service-name/timescale.png)

<Note>
**Note**: The service name cannot be changed after it is set.
</Note>

### Step 4: Configure Connection Options

Specify your source credentials and verify the connection.

#### Enter Connection Details

Enter the connection details for TimescaleDB. The right-hand panel in the UI displays inline help for each field.

![Configure Service Connection](/public/images/connector2.0/metadata-ingestion/Database/connection-details/timescale.png)

**Connection**
- **Username**: Specify the user to connect to TimescaleDB. It should have enough privileges to read all the metadata.
- **Host and Port**: Enter the fully qualified hostname and port number for your TimescaleDB deployment.

**Authentication**
- **Auth Type**: Basic Auth or IAM-based auth to connect to instances or cloud RDS.
  - **Basic Auth**: Provide the password to connect to TimescaleDB.
  - **IAM Based Auth**:
    - **AWS Access Key ID** & **AWS Secret Access Key**: Required when interacting with AWS programmatically ([docs](https://docs.aws.amazon.com/IAM/latest/UserGuide/security-creds.html)).
    - **AWS Region**: Required to resolve service endpoints ([docs](https://docs.aws.amazon.com/AmazonRDS/latest/UserGuide/Concepts.RegionsAndAvailabilityZones.html)).
    - **AWS Session Token** *(Optional)*: Needed when using temporary credentials ([docs](https://docs.aws.amazon.com/IAM/latest/UserGuide/id_credentials_temp_use-resources.html)).
    - **Endpoint URL** *(Optional)*: Override the default AWS endpoint if needed ([docs](https://docs.aws.amazon.com/general/latest/gr/rande.html)).
    - **Profile Name**: Use a named profile other than `default` if desired ([docs](https://docs.aws.amazon.com/cli/latest/userguide/cli-configure-profiles.html)).
    - **Assume Role Arn**: ARN of the role to assume for cross-account access ([docs](https://docs.aws.amazon.com/STS/latest/APIReference/API_AssumeRole.html)).
    - **Assume Role Session Name**: Identifier for the assumed role session ([docs](https://docs.aws.amazon.com/STS/latest/APIReference/API_AssumeRole.html#:~:text=Role%20Session%20Name)).
    - **Assume Role Source Identity**: Source identity for CloudTrail attribution ([docs](https://docs.aws.amazon.com/STS/latest/APIReference/API_AssumeRole.html#:~:text=SourceIdentity)).
    <Tip>
    When using Assume Role authentication, provide the AWS Region and the Assume Role ARN used for ingestion.
    </Tip>

#### Test Connection

Once the credentials have been added, click on **Test Connection** and **Save** the changes.

<img src="/public/images/connectors/test-connection.png" alt="Test Connection" />

### Step 5: Configure Ingestion Options

In the **What to Ingest** step, use filter patterns to control which assets OpenMetadata ingests from your database service. Filter patterns use regular expressions applied to asset names.

#### How Filter Patterns Work

- **Include**: Add one or more comma-separated regular expressions. OpenMetadata ingests only assets whose names match at least one expression. Leave blank to include all assets.
- **Exclude**: Add one or more comma-separated regular expressions. OpenMetadata skips any asset whose name matches an expression. Leave blank to exclude nothing.

Rules match asset names using one of five expressions:

- **contains**: matches any name containing the value. For example, `sales` matches `my_sales_data` and `sales_2024`.
- **starts with**: matches names beginning with the value. For example, `prod_` matches `prod_db` and `prod_schema`.
- **ends with**: matches names ending with the value. For example, `_raw` matches `events_raw` and `logs_raw`.
- **is exactly**: matches the exact name only. For example, `analytics` matches only `analytics`.
- **matches regex**: matches names using a regular expression. For example, `^prod_.*_v\d+$` matches `prod_events_v1`.

When both Include and Exclude are set, Exclude takes priority.

<Tip>
Leave all filter patterns empty to ingest all databases, schemas, and tables available in the source.
</Tip>

**Filter Options**

The Database, Schema, Table, and Stored Procedure sections each include the following filter options:

- **Database**: Controls which databases OpenMetadata ingests from the source.
- **Schema**: Controls which schemas within the ingested databases are included.
- **Table**: Controls which tables and views within the ingested schemas are included.
- **Stored Procedure**: Controls which stored procedures are included in metadata ingestion.

Each section provides the following controls:

- **Scan Mode**: You can choose between the following scan modes:
    - **Scan all**: Ingests every asset of that type the connector can access. This is the default.
    - **Only specific**: Enables include rules so only assets matching at least one rule are ingested.
- **Exclude system toggle**: Use this toggle to automatically filter out system-reserved names defined by the connector, for example, **Exclude system databases** for the Databases section.
- **Always exclude**: Add permanent exclusion rules (shown in red). Assets matching these rules are never ingested, regardless of include rules.
- **Preview**: Shows a real-time summary of what will be in scope based on your current rules.
- **Include rules** *(available only in **Only specific** mode)*: Click **+ Add** to define a rule. Added rules appear as chips; an asset is included if it matches any rule.

### Step 6: Create & Deploy

Click **Create & Deploy** to deploy the agent and start the first metadata ingestion run. OpenMetadata saves the service configuration and immediately begins pulling metadata from the source.

To monitor ingestion progress or view the service you just added, go to **Settings** > **Services** and select your service.

## Configure Metadata Agent and Schedule Ingestion

<MetadataAgentDatabase />

## Securing TimescaleDB Connection with SSL in OpenMetadata

To establish secure connections between OpenMetadata and a TimescaleDB database, you can configure SSL using different SSL modes provided by PostgreSQL, each offering varying levels of security.

Under **Advanced Config**, specify the SSL mode appropriate for your connection, such as `prefer`, `verify-ca`, `allow`, and others. After selecting the SSL mode, provide the CA certificate used for SSL validation (`caCertificate`). Note that TimescaleDB (PostgreSQL) requires only the CA certificate for SSL validation.

<Tip>
For IAM authentication, it is recommended to choose the `allow` mode or another SSL mode that fits your specific requirements.
</Tip>

<Related />
